# smp-ng-core-dump-handler

./: CMakeLists.txt  README.md  core-dump-handler.conf  core-dump-handler.sh
