cmake_minimum_required(VERSION 3.12)
project(core-dump-handler VERSION 1.0 LANGUAGES NONE)

file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/.gitignore "*")

install(FILES 	${CMAKE_CURRENT_SOURCE_DIR}/core-dump-handler.conf DESTINATION ${CMAKE_INSTALL_SYSCONFDIR})
install(FILES 	${CMAKE_CURRENT_SOURCE_DIR}/core-dump-handler.sh 
		DESTINATION ${CMAKE_INSTALL_SBINDIR} 
		PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
	)
